# tezbro

./: .dockerignore  .gitignore  Cargo.toml  README.md  Rocket.toml  config.example.yaml  docker-compose-tests.yaml  migrations.dockerfile  tests.dockerfile  tests.env
migrations/: 20220914064153_init.down.sql  20220914064153_init.up.sql
src/: authentication.rs  db.rs  hashing.rs  jwt.rs  keys.rs  main.rs  password_encryption.rs  photo.rs  role.rs  roles.rs
