[package]
name = "tezbro"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
sha2 = "0.10.6"
hmac = "0.12.1"
jwt = "0.16.0"
serde = { version = "1.0.145", features = ["derive"] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.rocket]
version = "0.5.0-rc.2"
features = ["json", "uuid"]

[dependencies.sqlx]
version = "0.5.1"
default-features = false
features = ["macros", "migrate", "uuid"]

[dependencies.rocket_db_pools]
version = "0.1.0-rc.2"
features = ["sqlx_postgres"]

